# path-partition

./: .gitignore  README.md  circleArc.py  config.py  example1.json  example2.json  lineSegment.py  main.py  path.py  path_example.json  path_example2.json  pyproject.toml  requirements.txt  segment.py  test_circleArc.py  test_lineSegment.py  test_segment_utility.py  test_utils.py  utils.py  vector.py
example_paths/: example1.json  example2.json
path_partition/: main.py  path.py  utils.py  vector.py
path_partition/segments/: circleArc.py  circle_arc.py  lineSegment.py  line_segment.py  segment.py
pathpartition/common/: main.py
src/: config.py  main.py  path.py
src/segments/: circleArc.py
tests/: disabled_test_lineSegment.py  test_circleArc.py  test_circle_arc.py  test_lineSegment.py  test_line_segment.py  test_utils.py
